Changelog for Babel.

Babel 3.0.0-beta3 (February 14, 2015)
=====================================
- [#101] fix BabelTranslation
- [#99] Polish translation

Babel 3.0.0-beta2 (December 2, 2014)
====================================
- remove "q" and "cultureKey" url parameters on BabelLinks
- add optional &toArray property to BabelLinks snippet
- add optional &toPlaceholder property to BabelLinks snippet
- add optional &wrapperTpl property to BabelLinks snippet
- add icons
- [#97] Add ru lexicon
- [#73] Add AjaxManager support

Babel 3.0.0-beta1 (November 28, 2014)
=====================================
- [#77] Update readme.txt
- [#51] Append URL parameters of current page if any
- add &includeUnlinked property to BabelLinks, option to skip/include unlinked context
- [#56] Emptying the MODX trash can corrupt values in modx_site_tmplvar_contentvalues
- [#88] Skip unpublished contexts
- [#82] Check for resourceId parameter before defaulting.
- [#78][#62] added outputSeparator for BabelLinks
- [#75] Replaced deprecated method clearCache() with refresh()
- [#84] optimize OnResourceDuplicate
- [#44][#29] Using cultureKey instead of contextKey on BabelTranslation snippet
- [#70] fix is_folder to isfolder
- [#27][#90][#92] Refactor language selection, runs using AJAX
- [#83][#59] extend babel plugin OnResourceDuplicate for nested resources
- [#67] italian translation
- [#60] Added Dutch translation
- [#58][#64] Fixed the error with updating a resource, at least in the quick update window

Babel 2.2.5-pl
==============
- Extended list of languages in translation files and added Romanian translation.
- Issue #31: Maked babel buttons in manager position fixed and changed look accordingly.

Babel 2.2.4-pl
==============
- Fixed issue #25: Unchecked "checkbox" TVs are now synchronized correctly.
- Issue #22: Added showCurrent parameter to BabelLinks snippet.

Babel 2.2.3-rc1
==============