@@ -3,6 +3,7 @@ Changelog for Babel.
 Babel 3.0.0-beta3 (February 14, 2015)
 =====================================
 - [#101] fix BabelTranslation
+- [#100] add optional typeahead combo of pagetitle on searching new link
 - [#99] Polish translation
 
 Babel 3.0.0-beta2 (December 2, 2014)
